todo-app/base/manifest/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
  template:
    metadata:
      labels:
        app: todo-server
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: app-storage-claim    
      containers:
        - name: app
          image: PROJECT/WWW
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "5m"
              memory: "25Mi"
            limits:
              cpu: "150m"
              memory: "50Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 3000          
          volumeMounts:
            - name: shared-files
              mountPath: /var/tmp/mooc/files          
          ports:
            - name: todo-port
              containerPort: 3000
