todo-app/base/manifest/todo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: app
          image: PROJECT/BACKEND
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "5m"
              memory: "25Mi"
            limits:
              cpu: "150m"
              memory: "50Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 3000          
          ports:
            - name: todo-bc-port
              containerPort: 3000
