todo-app/base/manifest/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
    - name: http-monitoring
      appProtocol: http
      port: 8222
      targetPort: 8222
    - name: cluster
      port: 6222
      targetPort: 6222
