todo-app/base/manifest/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo-server
  ports:
    - port: 2345
      protocol: TCP
      targetPort: todo-port
