todo-app/base/manifest/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-bc-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: todo-bc-port
