todo-app/base/manifest/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-route
spec:
  parentRefs:
  - name: todo-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-svc
      port: 2345
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: todo-bc-svc
      port: 2345
